--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
     --Blanco: #ffffff;
     --Obscuro: #212121;
     --Principal: #ffec00;
-    --secundario: #009988;
+    --Secundario: #009988;
     --Tercero: #9e9e9e;
     --Cuarto: #dfe9f3;
 
-}
+   }
 
  
     /* Globales */
@@ -18,7 +18,14 @@
        box-sizing: inherit;
       }
       
-    
+    .sombra{
+      -webkit-box-shadow: 12px 24px 23px -3px rgba(222,211,222,1);
+      -moz-box-shadow: 12px 24px 23px -3px rgba(222,211,222,1);
+      box-shadow: 12px 24px 23px -3px rgba(222,211,222,1);
+      background-color: var(--Blanco);
+      padding: 2rem;
+    border-radius: 3rem;
+    }
       /* Tipografia */
        
       
@@ -26,8 +33,17 @@
       body {
        font-size: 16px;  /*1rem = 10px */
        font-family: "krub" , sans-serif;
-      background-image: linear-gradient(to top, var(--Cuarto) 0%, var(--blanco) 20%)
+      background-image: linear-gradient(to bottom, var(--Blanco) 0%, var(--Cuarto) 100%)
+      
+    
       }
+
+      h1 {
+      text-align: center;
+      }
+
+
+
       h1 span {
         font-size: 12px; 
       }
@@ -58,7 +74,7 @@
         }
         
         .contenedor {
-          max-width: 700px;
+          max-width: 750px;
           margin-left: auto;
           margin-right: auto;
           margin-top: 2%;
@@ -156,7 +172,7 @@
         background-size: cover;
         height: 450px;
         padding: 20px;
-        
+        margin-bottom: 3rem;
         position: relative;
       }
      .contenidohero {
@@ -178,3 +194,19 @@
          color: white;
        }
     
+       .contacto{
+       max-width: 700px;
+       margin-left: auto;
+       margin-right: auto;
+       margin-top: 2%;
+       margin-bottom: 2%; 
+       }
+
+       /** Servicios **/
+       .servicios{
+         display: grid; 
+        grid-template-columns: 1fr 1fr 1fr;    /* 33.3% 33.3% 33.3% */
+        /*grid: 200px 800px / 300px 300px;*/
+        
+      
+      }
