--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@
         margin-bottom: 3rem;
         position: relative;
       }
-     .contenidohero {
+      .contenidohero {
         position: absolute;
         background-color: rgb( 0 0 0 / 70%); /** Anterior **/ 
         bottom: 0%;
@@ -185,7 +185,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: center;  
     
        }
     
@@ -207,6 +207,24 @@
          display: grid; 
         grid-template-columns: 1fr 1fr 1fr;    /* 33.3% 33.3% 33.3% */
         /*grid: 200px 800px / 300px 300px;*/
-        
       
       }
+      
+     .servicio {
+
+
+     } 
+      
+      .servicio h2 {
+
+      }
+      
+      
+      
+      
+      .servicio .iconos {
+      height: 15rem;
+      width: 15rem;
+      background-color: var(--Principal);
+      border-radius: 50%;
+    }
