--- a/style.css
+++ b/style.css
@@ -211,14 +211,20 @@
       }
       
      .servicio {
-
+     display: flex;
+     flex-direction: column;
+      align-items: center;
 
      } 
       
-      .servicio h2 {
+      .servicio h3 {
+      color: var(--Secundario)
 
       }
-      
+
+      .servicio p {
+        line-height: 2;
+      }
       
       
       
@@ -227,4 +233,9 @@
       width: 15rem;
       background-color: var(--Principal);
       border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+
+
     }
