--- a/style.css
+++ b/style.css
@@ -7,12 +7,17 @@
     --Cuarto: #dfe9f3;
 
    }
-
- 
+    /* Scroll snap */
+    .servicios .contenidohero{
+      scroll-snap-align: center;
+      scroll-snap-stop: always;
+   }
+   
     /* Globales */
     html {
         font-size: 62.5%;
         box-sizing: border-box;  /* Hack para box model **/
+        scroll-snap-type: y mandatory;     
       }
        *, *:before, *:after {
        box-sizing: inherit;
@@ -40,7 +45,9 @@
 
       h1 {
       text-align: center;
-      }
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      font-size: 4rem; 
+    }
 
 
 
@@ -95,6 +102,21 @@
           text-align: center;
       
         }
+
+        .botonabajo {
+          background-color: lightseagreen;
+          color: white;
+          padding: 1rem 3rem 1rem 3rem;
+          margin-top: 1rem;
+          font-size: 2rem;
+          text-decoration: none;
+          text-transform: uppercase;
+          border-radius: .5rem;
+          font-weight: bold;
+          width: 30%;
+          text-align: center;
+          align-items: flex-end;
+        }
          
         .titulo2  {
          text-align: center;
@@ -124,6 +146,26 @@
           }
         }
     
+
+        @media (min-width: 768px) {
+          .servicios{
+            display: grid; 
+           grid-template-columns: 1fr 1fr 1fr;    /* 33.3% 33.3% 33.3% */
+           /*grid: 200px 800px / 300px 300px;*/
+         
+          }
+        }
+
+        @media (min-width: 768px){
+          .contenedor-campos{
+           display: grid;
+          grid-template-columns: 50% 50%;
+          column-gap: 1rem;
+          grid-template-rows: auto auto 25rem;
+        
+          }
+        }
+
         @media (min-width: 768px) {
           .w-100
           .nav1 {
@@ -210,6 +252,7 @@
 
        .tituloh2{
          text-align: center;
+         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 
 
@@ -242,12 +285,7 @@
 
 
        /** Servicios **/
-       .servicios{
-         display: grid; 
-        grid-template-columns: 1fr 1fr 1fr;    /* 33.3% 33.3% 33.3% */
-        /*grid: 200px 800px / 300px 300px;*/
-      
-      }
+       
       
      .servicio {
      display: flex;
@@ -278,22 +316,22 @@
       justify-content: space-evenly;
 
     }
-
-    .contenedor-campos {
-      
-   
-    }
-
+   legend {
+     color: #ffec00;
+   }
     .campo {
     margin-bottom: 2rem;
-
+    margin: 0 auto; 
+    width: 250px;
     }
+
     .campo label {
     color: var(--Obscuro); 
     
     font-weight: bold;
     margin-bottom: .5rem;
     display: block;
+    text-align: start
 
     }
    /**[type="text"]**/
@@ -337,13 +375,29 @@
     display: block;
 }
 
-footer {
+.footer {
   text-align: center;
 }
 
 
-.enviar .boton {
-justify-content: flex-end;
+.enviar {
+justify-content: flex-end
 
 
 }
+
+ 
+/**.campo:nth-child(3)
+.campo:nth-child(4) {
+
+  grid-column: 1 / 4;
+}**/
+
+/*  .nombredecampo(2){
+
+grid-column: 1 / 3;
+grid-row: 3 / 4; 
+
+}*/
+
+/** Footer **/ 
